# task_management_system

./: README.md  pyproject.toml
data_sources/: tasks.jsonl
src/: cli.py
src/app/: task_management_system.py
src/contracts/: task.py  task_source.py
src/task_sources/: sources_list.py  stdin.py  task_generator.py  task_json.py
src/task_sources/generator_data/: data_lists.py
tests/: conftest.py  test_cli.py  test_generator.py  test_stdin.py  test_task_json.py  test_task_management.py
